fix text wrapping style issues in player tracker (fixes #212)

--- a/style.css
+++ b/style.css
@@ -647,6 +647,7 @@ aside + aside {
 
 td {
   padding: 0;
+  vertical-align: top;
 }
 
 td + td {
